# Ryx

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
benches/: bench_compare.py
docs/: .gitignore  Dockerfile  docker-compose.yml  docusaurus.config.js  docusaurus.config.ts  package-lock.json  package.json  server.js  sidebars.js
docs/doc/: intro.mdx
docs/doc/advanced/: _category_.json  caching.mdx  cli.mdx  custom-lookups.mdx  hooks.mdx  index.mdx  multi-db.mdx  raw-sql.mdx  signals.mdx  sync-async.mdx  transactions.mdx  validation.mdx
docs/doc/cookbook/: _category_.json  blog-tutorial.mdx  deployment.mdx  index.mdx  testing.mdx
docs/doc/core-concepts/: _category_.json  fields.mdx  index.mdx  managers-and-querysets.mdx  migrations.mdx  models.mdx
docs/doc/crud/: _category_.json  bulk-operations.mdx  creating.mdx  deleting.mdx  index.mdx  reading.mdx  updating.mdx
docs/doc/getting-started/: _category_.json  index.mdx  installation.mdx  project-structure.mdx  quick-start.mdx
docs/doc/internals/: _category_.json  architecture.mdx  connection-pool.mdx  index.mdx  performance.mdx  query-compiler.mdx  rust-core.mdx  type-conversion.mdx
docs/doc/querying/: _category_.json  aggregations.mdx  filtering.mdx  index.mdx  ordering-and-pagination.mdx  q-objects.mdx  values-and-annotate.mdx
docs/doc/reference/: _category_.json  api-reference.mdx  exceptions.mdx  field-reference.mdx  index.mdx  lookup-reference.mdx  lookup_reference.mdx  signals-reference.mdx
docs/doc/relationships/: _category_.json  foreign-key.mdx  index.mdx  many-to-many.mdx  one-to-one.mdx  prefetch-related.mdx  select-related.mdx
docs/src/components/: Badge.css  Badge.js  CodeBlock.css  CodeBlock.js  FeatureCard.css  FeatureCard.js  StepCard.css  StepCard.js
docs/src/css/: custom.css
docs/src/theme/: GitHubStats.css  GitHubStats.js
docs/src/theme/Footer/: index.js  styles.css
docs/src/theme/NavbarItem/: ComponentTypes.js
docs/src/theme/SearchBar/: index.js  styles.css
examples/: 01_setup_and_models.py  02_crud_operations.py  03_querying_and_filters.py  04_aggregation_and_annotation.py  05_relationships_and_joins.py  06_bulk_operations.py  07_transactions.py  08_validation_and_clean.py  09_signals.py  10_caching.py  11_migrations.py  12_sync_bridge.py  13_benchmark_sqlalchemy.py  README.md  my_plugin.py  ryx.example.toml  ryx.example.yaml
ryx/: __init__.py  __main__.py  bulk.py  cache.py  descriptors.py  exceptions.py  executor_helpers.py  fields.py  models.py  queryset.py  relations.py  router.py  ryx_core.pyi  transaction.py  validators.py
ryx-backend/: Cargo.toml
ryx-backend/src/: core.rs  lib.rs  pool.rs  query.rs  transaction.rs  utils.rs
ryx-backend/src/backends/: mod.rs  mysql.rs  postgres.rs  sqlite.rs
ryx-core/: Cargo.toml
ryx-core/src/: errors.rs  executor.rs  lib.rs  model_registry.rs  types.rs
ryx-python/: Cargo.toml  py.typed  pyproject.toml  test.py
ryx-python/ryx/: __init__.py  __main__.py  bulk.py  executor_helpers.py  fields.py  models.py  pool_ext.py  queryset.py  relations.py  ryx_core.pyi  signals.py  transaction.py  validators.py
ryx-python/ryx/cli/: __init__.py  config.py  config_context.py  config_loader.py  parser.py  plugins.py  registry.py
ryx-python/ryx/cli/commands/: __init__.py  flush.py  makemigrations.py  migrate.py  shell.py  showmigrations.py  sqlmigrate.py  version.py
ryx-python/ryx/migrations/: autodetect.py  ddl.py  runner.py  state.py
ryx-python/src/: lib.rs  plan.rs
ryx-python/tests/: README.md  test_compiler.rs
ryx-python/tests/integration/: test_crud.py  test_lookups_integration.py  test_multi_db.py  test_multi_db_script.py  test_queryset_operations.py  test_transactions.py
ryx-python/tests/unit/: test_lookups.py
ryx-query/: Cargo.toml
ryx-query/benches/: query_bench.rs
ryx-query/src/: ast.rs  backend.rs  errors.rs  lib.rs  symbols.rs
ryx-query/src/compiler/: compiler.rs  compilr.rs  helpers.rs  mod.rs
ryx-query/src/lookups/: common_lookups.rs  date_lookups.rs  json_lookups.rs  lookups.rs  mod.rs
ryx/cli/: config.py  config_context.py  registry.py
ryx/cli/commands/: base.py  dbshell.py  flush.py  inspectdb.py  makemigrations.py  migrate.py  shell.py  showmigrations.py  sqlmigrate.py  version.py
ryx/migrations/: __init__.py  ddl.py  runner.py  state.py
src/: errors.rs  executor.rs  lib.rs  model_registry.rs  plan.rs  pool.rs  transaction.rs
src/query/: ast.rs  compiler.rs  lookup.rs  mod.rs
src/query/compiler/: compiler.rs  helpers.rs  mod.rs
src/query/lookups/: common_lookups.rs  date_lookups.rs  json_lookups.rs  lookups.rs  mod.rs
tests/: conftest.py  test_compiler.rs
tests/integration/: test_bulk_operations.py  test_crud.py  test_lookups_integration.py  test_queries.py
tests/unit/: test_exceptions.py  test_fields.py  test_lookups.py  test_models.py  test_queryset.py  test_validators.py
