[package]
name = "ryx-backend"
version = "0.1.0"
edition = "2024"
description = "Core query backend engine for Ryx ORM"

[dependencies]
ryx-core = { path = "../ryx-core", version = "0.1.0" }
ryx-query = { path = "../ryx-query", version = "0.1.0" }
sqlx = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }
smallvec = { workspace = true }
dashmap = "6.1.0"
async-trait = "0.1"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

# [[bench]]
# name = "query_bench"
# harness = false
