[package]
name = "ryx-core"
version = "0.1.2"
edition = "2024"
description = "Ryx ORM — a Django-style Python ORM powered by sqlx (Rust) via PyO3"
license = "MIT OR Apache-2.0"
authors = ["Wilfried GOEH", "AllDotPy", "Ryx Contributors"]

# 
# The crate is compiled as a C dynamic library so that Python can import it.
# "cdylib"  → produces a .so / .pyd file that maturin renames to ryx_core.so
# We also keep "rlib" so that internal Rust tests (cargo test) can link against
# the library without needing a Python interpreter.
# 
[lib]
name = "ryx_core"
crate-type = ["cdylib", "rlib"]

# 
# Feature flags
#
# Each database backend is opt-in so users only compile what they need.
# Default: all.
#
# Usage in Cargo.toml:
#   ryx = { version = "0.1", features = ["sqlite", "mysql"] }
# 
[features]
default = ["all"]  # enable all backends by default for dev convenience
postgres = ["sqlx/postgres"]
mysql = ["sqlx/mysql"]
sqlite = ["sqlx/sqlite"]
all = ["postgres", "mysql", "sqlite"]

[dependencies]
ryx-query = { path = "../ryx-query" }

# PyO3 
# "extension-module" is required when building a cdylib for Python import.
# Without it, PyO3 tries to link against libpython, which breaks on Linux/macOS
# when Python dynamically loads the extension.
pyo3 = { workspace = true }

# Async bridge 
# pyo3-async-runtimes is the maintained successor of the abandoned pyo3-asyncio.
# The "tokio-runtime" feature wires Rust Futures into Python's asyncio event
# loop via tokio — users simply `await` our ORM calls from Python.
pyo3-async-runtimes = { workspace = true }

# sqlx 
# We use sqlx 0.8.x (stable). The "runtime-tokio" feature is mandatory since
# we drive everything through tokio. "macros" enables the query!/query_as!
# macros if needed later. "chrono" adds DateTime support.
sqlx = { workspace = true }

# Tokio
# Full tokio runtime. "full" is fine for a library crate — callers can restrict
# features if they need a lighter binary.
tokio = { workspace = true }
smallvec = { workspace = true }
chrono = { workspace = true }

# Serialization
# serde + serde_json: used to pass structured data between Rust and Python
# (row data, query parameters, etc.)
serde = { workspace = true }
serde_json = { workspace = true }

# Utilities
# thiserror: ergonomic error type derivation. We define a rich BityaError type
# that converts cleanly into Python exceptions via PyO3's IntoPy trait.
thiserror = { workspace = true }

# once_cell: used to store the global tokio Runtime and the connection pool
# as lazily-initialized singletons. Using std::sync::OnceLock would also work
# on Rust 1.70+, but once_cell has a slightly nicer API for our use case.
once_cell = { workspace = true }

# tracing: structured, async-aware logging. We instrument every SQL execution
# so users can enable RUST_LOG=ryx=debug for full query visibility.
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

#
# Profiles — favor peak perf in release builds (used by maturin/pip wheels).
# LTO thin keeps link times reasonable while enabling cross-crate inlining.
# codegen-units=1 avoids missed inlining across crates.
#
[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = "debuginfo"
panic = "unwind"

[profile.dev]
opt-level = 3
debug = true

[dev-dependencies]
# tokio test macro for async unit tests
tokio = { version = "1.40", features = ["full", "test-util"] }
criterion = { version = "0.5", features = ["async_tokio"] }
