[package]
name = "Ryx"
version = "0.1.2"
edition = "2024"
description = "Ryx ORM — a Django-style Python ORM powered by sqlx (Rust) via PyO3"
license = "MIT OR Apache-2.0"
authors = ["Wilfried GOEH", "AllDotPy", "Ryx Contributors"]

# 
# The crate is compiled as a C dynamic library so that Python can import it.
# "cdylib"  → produces a .so / .pyd file that maturin renames to ryx_python.so
# We also keep "rlib" so that internal Rust tests (cargo test) can link against
# the library without needing a Python interpreter.
# 
[lib]
name = "ryx_python"
crate-type = ["cdylib", "rlib"]


[dependencies]
# ryx-core = { path = "../ryx-core" }
ryx-backend = { path = "../ryx-backend" }
# ryx-query = { path = "../ryx-query" }

# PyO3 
# "extension-module" is required when building a cdylib for Python import.
# Without it, PyO3 tries to link against libpython, which breaks on Linux/macOS
# when Python dynamically loads the extension.
pyo3 = { workspace = true }

# Async bridge 
# pyo3-async-runtimes is the maintained successor of the abandoned pyo3-asyncio.
# The "tokio-runtime" feature wires Rust Futures into Python's asyncio event
# loop via tokio — users simply `await` our ORM calls from Python.
pyo3-async-runtimes = { workspace = true }

# Async runtime
tokio = { workspace = true }

# Smallvec: used for efficient small lists of query parameters and row values
smallvec = { workspace = true }

# tracing: structured, async-aware logging. We instrument every SQL execution
# so users can enable RUST_LOG=ryx=debug for full query visibility.
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

#
# Profiles — favor peak perf in release builds (used by maturin/pip wheels).
# LTO thin keeps link times reasonable while enabling cross-crate inlining.
# codegen-units=1 avoids missed inlining across crates.
#
[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
strip = "debuginfo"
panic = "unwind"

[profile.dev]
opt-level = 3
debug = true

[dev-dependencies]
# tokio test macro for async unit tests
tokio = { version = "1.40", features = ["full", "test-util"] }
criterion = { version = "0.5", features = ["async_tokio"] }
