[package]
name = "ryx-query"
version = "0.1.0"
edition = "2024"
description = "Core query compilation and lookup logic for Ryx ORM"

[dependencies]
sqlx = { version = "0.8.6", features = ["runtime-tokio", "macros", "chrono", "uuid", "json", "any"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
once_cell = "1"
tracing = "0.1"
smallvec = { version = "1.13", features = ["serde"] }
dashmap = "5"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "query_bench"
harness = false
