[package]
name = "ryx-query"
version = "0.1.0"
edition = "2024"
description = "Core query compilation and lookup logic for Ryx ORM"

[dependencies]
# ryx-backend = { path = "../ryx-backend", version = "0.1.0" } 
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
once_cell = { workspace = true }
tracing = { workspace = true }
smallvec = { workspace = true }
dashmap = "6.1.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "query_bench"
harness = false
